--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: python generate_notebook_list.py
 
       - name: Build Jupyter Book
-        run: jupyter-book build .
+        run: jupyter book build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
