--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      pages: write
+      pull-requests: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -34,7 +37,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: .vitepress/dist/
+          folder: _build/html/
           branch: gh-pages
           clean-exclude: pr-preview
           force: false
