--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           python .github/workflows/generate_notebook_list.py
           cp notebooks.json _build/html/notebooks.json
           cp index.html _build/html/index.html
-          touch output/.nojekyll
+          touch _build/html/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
